--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>首頁 &raquo; paperenblog</title><link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" /><link href="http://iamlze.cn/theme/paperen/bootstrap.css" rel="stylesheet" /><link href="http://iamlze.cn/theme/paperen/style.css" rel="stylesheet" /><link href="http://iamlze.cn/js/google-code-prettify/prettify.css" rel="stylesheet" /><link rel="alternate" type="application/rss+xml" title="paperenblog Feed" href="http://iamlze.cn/rss"/>
-<link rel="shortcut icon" href="http://iamlze.cn/theme/paperen/image/favicon.ico" /><script src="http://iamlze.cn/js/jquery-1.7.1.min.js"></script><script src="http://iamlze.cn/js/google-code-prettify/prettify.js"></script><script src="http://iamlze.cn/js/bootstrap/bootstrap-tooltip.js"></script><script src="http://iamlze.cn/js/bootstrap/bootstrap-popover.js"></script><script src="http://iamlze.cn/js/bootstrap/bootstrap-fold.js"></script><script src="http://iamlze.cn/js/slimbox/slimbox2.js"></script><script src="http://iamlze.cn/js/blog.js"></script>
+<link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" />
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="vim/core.js"></script>
 <script>
 $(document).ready(function(){
@@ -14,24 +14,6 @@ $(document).ready(function(){
 
 <body>
 
-<!-- navbar -->
-<div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="brand" href="http://iamlze.cn/">Paperenblog</a>
-            <div class="nav-collapse">
-                <ul class="nav">
-		                    <li class="active"><a href="http://iamlze.cn/">首页</a></li>
-		                    <li><a href="http://iamlze.cn/archive">归档</a></li>
-		                    <li><a href="http://iamlze.cn/tag">标签</a></li>
-		                    <li><a href="http://iamlze.cn/author">作者</a></li>
-		                    <li><a href="http://iamlze.cn/about">关于</a></li>
-		                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- navbar -->
 
 <!-- container -->
 <div class="container-fluid wrap">
@@ -43,11 +25,6 @@ $(document).ready(function(){
 	<a href="javascript:void(0);" rel="column" class="btn btn-small btn-display active" title="列呈現" data-original-title="列呈現"><i class="icon-th"></i></a>
 	<a href="javascript:void(0);" rel="row" class="btn btn-small btn-display" title="行呈現" data-original-title="行呈現"><i class="icon-th-list"></i></a>
 </div>
-<script>
-	$('.display-style a').tooltip({
-		placement: 'right'
-	});
-</script>
 <div class="c"></div>    <div class="row-fluid">
 	<div class="span6 col">
 		    <div class="post post-fragment">
@@ -1112,9 +1089,6 @@ $this-&gt;model_cache( 'model_user_all', $per_page, $offset );
 		</div>
 		<div class="c"></div>
 		<ul class="pager"><li class="previous"><a href="http://iamlze.cn/page/2" rel="prev">&laquo; 較後</a></li></ul><div class="c"></div>    </div>
-	<script>
-	$('.post-content .post-image').slimbox();
-	</script>
 </div>
 
 <!-- sidebar -->
@@ -1129,11 +1103,6 @@ $this-&gt;model_cache( 'model_user_all', $per_page, $offset );
 	<h3>Cmd <a href="#" id="what-is-cmd" rel="popover" data-content="作為一種脫離鼠標的操作方式，簡而言之就是命令行方式進行操作" data-original-title="CMD">What?</a></h3>
 	<input type="text" class="span11" value="該功能暫未完成，請熱切期待中" disabled="true">
     </div>-->
-    <script>
-	$('#what-is-cmd').popover({
-	    placement : 'bottom'
-	});
-    </script>
 	<!-- cmd -->
 
 	
@@ -1172,11 +1141,6 @@ $this-&gt;model_cache( 'model_user_all', $per_page, $offset );
 </tr>
 
 </table></div>
-<script>
-	$('.calendar a').tooltip({
-		placement: 'left'
-	});
-</script>
 <!-- calendar -->	<!-- hotpost -->
 <div class="hotpost">
 	<h3>顶得火热博文</h3>
@@ -1237,11 +1201,6 @@ se			</a>
 		<li><a href="http://geili.me" rel="popover" data-content="码农，关注Java、Web前端技术  通过博客认识的朋友" data-original-title="smilence" rel="friend">smilence</a></li>
 	</ul>
 </div>
-<script>
-$('.links a').popover({
-	placement : 'left'
-});
-</script>
 <!-- links -->
 </div>
 <!-- sidebar --></div>
@@ -1283,15 +1242,6 @@ $('.links a').popover({
         </div>
     </div>
 </div>
-<script>
-	var base_url = 'http://iamlze.cn/';
-	$(function(){
-		$('.post-content pre').each(function(){
-			$(this).addClass('prettyprint linenums');
-		});
-		prettyPrint();
-	});
-</script>
 <!--[if lte IE 6]>
 <script src="http://anti-ie6-plan.googlecode.com/files/anti-ie6-plan.zh_CN_utf8.js"></script>
 <![endif]-->
